--- a/index.css
+++ b/index.css
@@ -61,7 +61,7 @@
  .news-letter-container {
  	height: 20%;
  	padding: 2%;
- 	background:darkgrey;
+ 	background:pink;
  }
 
 .newsletter-form {
@@ -71,7 +71,7 @@
 }
 
 .baseline {
-	background: darkgrey;
+	background: pink;
 
 }
 
